--- a/templates/main/dashboard_intervenant.html
+++ b/templates/main/dashboard_intervenant.html
@@ -1,9 +1,16 @@
 {% extends 'main/base.html' %}
 
-{% block title %}Dashboard Intervenant{% endblock %}
+{% block title %}Intervenant{% endblock %}
 
 {% block content %}
-<h2>Bienvenue Intervenant</h2>
-<p>Bonjour, {{ user.username }}.</p>
-<a href="{% url 'logout' %}" class="btn btn-danger">Déconnexion</a>
+<h2 class="mb-4">Espace Intervenant</h2>
+<p>Bonjour <strong>{{ user.username }}</strong>. Vous pouvez gérer les interventions attribuées.</p>
+
+<ul>
+    <li>Consulter les fiches d'intervention</li>
+    <li>Mettre à jour les statuts</li>
+    <li>Communiquer avec les usagers</li>
+</ul>
+
+<a href="{% url 'logout' %}" class="btn btn-danger mt-3">Se déconnecter</a>
 {% endblock %}
